Fixed spacing on login component

--- a/articles/src/App.css
+++ b/articles/src/App.css
@@ -150,6 +150,18 @@
   transform: translate(-50%, -50%);
 }
 
+.register input{
+  padding: 5px;
+  font-size: 16px;
+}
+
+.register button{
+  width: 84%;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
 .styled-input {
   width: 80%;
   height: 50px;
